correct thumbnail_only size display, wrap title & thumbnail in div
git-svn-id: https://plugins.svn.wordpress.org/tpg-get-posts@631907 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/trunk/css/tpg-get-posts-style.css
+++ b/trunk/css/tpg-get-posts-style.css
@@ -21,9 +21,10 @@
 .tpg-get-post-li-hr {display:none}
 /* class for content*/
 .tpg-get-posts-thumbnail{clear:both;}
-.tpg-posts-content{}
+.tpg-title-class{}
 .tpg-content-class{}
-#tpg-get-posts-excerpt{clear:both;}
+.tpg-thumbnail-class{}
+.tpg--excerpt-class{clear:both;}
 /* class for metadata*/
 .tpg-metadata-class {
 	margin-left:2em;
